--- a/hw9.ipynb
+++ b/hw9.ipynb
@@ -130,6 +130,81 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a2fb9e2f-a2d2-4f56-9fb4-c91492e4801b",
+   "metadata": {},
+   "source": [
+    "# Default Assumptions: Using Machine Learning to predict Taiwanese Credit Card Payments\n",
+    "\n",
+    "## Background\n",
+    "\n",
+    "Credi cards first arrived in Taiwan in 1979. With it, came many advantages; convience, automatic payment tracking, and fraud protection, amoung others. However, credit cards also brought with several downsides. One of the biggest being default: someone's payments rising above what they can manage, leaving them unable to pay back money they own. One dataset that tracks this unfortunate phenomenon is Kaggle's \"Default of Credit Card Clients Dataset\"; a dataset of credit card clients in 2005 Taiwan. \n",
+    "\n",
+    "This dataset contains information we will use to build a machine learning model. For each example, we have whether or not that person defaulted, as well as demographic information (age, education, and gender) and financial information (average bill, average credit car payment, previous defaults, credit limit, etc.). We will use this information to try to predict whether or not a given customer defaulted on their very next payment.\n",
+    "\n",
+    "## EDA\n",
+    "\n",
+    "The first thing of note was the relationship of age to debt. It seems that in their 20's people achieve a large amount of debt. However, older people in this dataset have less debt, either because they didn't accumulate any as credit cards were after their time, or because they've had more time to pay their debt off. (The one exception is the one 80-year-old who somehow has a giant bill to pay. Poor devil..)\n",
+    "\n",
+    "![My Image](img/EDA.png)\n",
+    "\n",
+    "Another, more interesting visualization however, came when plotting average bill against education:\n",
+    "\n",
+    "![My Image](img/Educ.png)\n",
+    "\n",
+    "This was an incredibly confusing image, and forced us to to take a deeper look into the dataset. As it turns out, only the numbers 1,2,3 have any worthwile meaning, coresponding to grad school, university, and high school respectively. The other numbers all represent some version of \"unknown\" or \"other\", and needed to be cleaned.\n",
+    "\n",
+    "## Data Processing\n",
+    "\n",
+    "Before we began training models, we started by cleaning up the education collumn. All \"unkowns\" were removed, and the values filled in were replaced with the most common value in this column. This process is called \"Imputing\".\n",
+    "\n",
+    "Additionally, two new columns were created: mean_bill, which averaged the bill of the previous five months, and mean_payment, which is the average of the previous five month's payments.\n",
+    "\n",
+    "## Building our model\n",
+    "\n",
+    "For this project, we decided to eschew linear classifiers. This is because a lot of complexity can't be captured by \"a higher number is good / bad\". For example, low payments may be a good thing, because it can indicate low debt. However, if your payments are low AND your bill is large, that's a very bad sign. This is complexity a linear model cannot capture..\n",
+    "\n",
+    "Another model can handle this complex relationship. Unlike linear models, these models can focus on one part of the data at a time, asking questions like \"is your debt above X and your payments below Y\"? Then, based on the answer, assign the patient to group one or group 2, where, depending on the group, they will be asked a different question. After a certain number of questions, a final decision is reached.\n",
+    "\n",
+    "This is known as a \"decision-tree\", one of the most common machine learning models out there, famed for both its simplicity and interpretability. A single decision tree was the first model we built.\n",
+    "\n",
+    "Another, you can have multiple trees working together. Then, instead of taking a single model, you can have the trees vote (almost like a parliament?), and take the majority opinion as the prediction. This model is known as a \"random forest\". This was the second model we built.\n",
+    "\n",
+    "Once the architectures were selected, hyperparameters were selected through grid searching and hyperparmaeter tuning.\n",
+    "\n",
+    "## Results\n",
+    "\n",
+    "After this, we underwent cross validation and a grid search to find the best configuration for our task. Shockingly, the model that performed best wasn't a random forest, which peaked at 0.818 accuracy, but a single decision tree, which peaked at 0.820.\n",
+    "\n",
+    "When the decision tree was used on test data that played no role in either fitting or hyperparameter selection, it achieved more or less the exact same accuracy at 0.820. This suggests the model is capable of generalization, and didn't just get lucky with a favourable valdiation split.\n",
+    "\n",
+    "### Feature Importance\n",
+    "\n",
+    "\n",
+    "There are two reasons one would want to make a model. The first is obvioulsy to make predictions, but another is to determine the importance of specific data points. In our case, here is a SHAP plot that shows how each feature of a specific sample contributed to each prediciton\n",
+    "\n",
+    "![My Image](img/SHAP.png)\n",
+    "\n",
+    "This plot shows the relative importance of each feature. Larger features are more influential. A feature pointing left means this feature caused the model to think this customer is less likely to default, and a feature pointing right means this feature caused the model to think this customer is more likely to default. \"PAY_0\" in this case means they didn't default on their last prediction. Here, that is a strong signal they will not default on the next payment. \n",
+    "\n",
+    "## Cateats\n",
+    "\n",
+    "Before treating this model as gospel there are several caveats that must be brought up. And honestly, you shouldn't take the model as gospel even with these caveats.\n",
+    "\n",
+    "1. This model isn't actually that good. A model that simply predicts \"will not default\" would achieve an accuracy of 0.77, meaning this model is only 5% more accurate that saying \"defaults never happen\".\n",
+    "\n",
+    "2. This dataset is entirely set in Taiwan. Different cultures with different views on debt may have completely different results and patterns.\n",
+    "\n",
+    "3. Be careful taking the outputs of the SHAP Plots too seriously in general. Not only will the \"important features\" vary based on dataset, it will vary from sample to sample. Just as an example, payments two months ago was more influential for this sample than payments one month ago, but there's no guarentee this would be the case for every customer in this dataset. In fact, it's almost certain it won't always be the case"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7708007-6ca5-4069-ace3-6c4ec34160f7",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "4052395d-a695-4063-97b6-46c4e13016d8",
    "metadata": {},
    "source": [
@@ -152,7 +227,7 @@
    "id": "87ea9c37-34c9-4b3e-a2df-e00cedd3e8ae",
    "metadata": {},
    "source": [
-    "<br><br>"
+    "I was very careful to use a bottom-up approach when explaining trees. Rather than calling the decision trees immediately, I explained the motivation for them and how they work first."
    ]
   },
   {
@@ -190,10 +265,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2fb9e2f-a2d2-4f56-9fb4-c91492e4801b",
+   "id": "45b0c106-bd6d-49ee-aa32-5869f77bac13",
    "metadata": {},
    "source": [
-    "<br><br><br><br>"
+    "I went into this class not really thinking I was going to learn all that much. I'd already taught myself a bunch of neural network and machine learning stuff; I thought this was gonna be just a rehash. \n",
+    "\n",
+    "I first got an inkling that wasn't true when we first looked at support vector machines. I'd tried to learn about them in the past, but it was always super confusing and self-refferential when described. Here, however, it was explained super simply: it's KNN, but with only a few key points. Why couldn't everyone just say that!? Once I got that, I really began to think, okay, maybe this course could be super helpful. If a concept that had previously eluded me that badly could make sense so quickly, there's got to be something here.\n",
+    "\n",
+    "That was the first real AHA! Moment. But a bigger one was seeing how useful hyperparameter tuning really could be. Previously, I'd just relied on the \"10 examples per parameter\" framerule. But seeing just how much of a difference the right hyperparameters made was really enlightening, and something I'm sure to use every time going forward.\n",
+    "\n",
+    "Another tool I learned is I finally understand the concept of data cleaning better. When I worked with professors, all my datasets were provided for me clean and pristine, I just had to build a network that could analyze that. Of course, it won't always be like that. I'm glad I learned about things like scaling and imputing in this environment instead of having to learn it on the fly in a job.\n",
+    "\n",
+    "Overall, a class I didn't expect much out of turned out to be a super useful class. If I were to rank all the classes I'd taken at UBC based on how much I expect to use this material in the future, the top 3 right now would probably CPSC 313, CHEM 403, and this class."
    ]
   },
   {
@@ -241,7 +324,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cpsc330",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -255,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
